--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "MIT",
   "readme": "A bare bones Tessel 2 blinky script.",
   "dependencies": {
+    "ambient-attx4": "^0.2.8",
     "express": "^4.14.0",
     "ws": "^1.1.1"
   },
